add new end point to image builder
This commit introduces a new endpoint to the image builder API, enhancing its capabilities. The changes include:
1) Integration of a new client for the recommendations model
2) Addition of the '/experimental/recommendations' endpoint
3) Inclusion of the client in configuration files
4) Implementation of a handler for 'recommendationPackage'
5) Introduction of new variables in template files
6) unit tests to check the added functionallity
