# internal/v1/api.yaml
@@ -652,7 +652,28 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/HTTPErrorList'
-
+  /experimental/recommendations:
+    post:
+      summary: List recommended packages.
+      description: "Returns a list of recommended packages for given list of packages."
+      operationId: recommendPackage
+      tags:
+        - recommendations
+      requestBody:
+        content:
+          application/json:
+            schema:
+              "$ref": "#/components/schemas/RecommendPackageRequest"
+        required: true
+      responses:
+        '200':
+          description: Return the recommended packages.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/RecommendationsResponse"
 components:
   schemas:
     HTTPError:
@@ -1307,6 +1328,29 @@ components:
           type: string
         signature:
           type: string
+    RecommendPackageRequest:
+      required:
+        - packages
+        - recommendedPackages
+      type: object
+      properties:
+        packages:
+          type: array
+          items:
+            type: string
+        recommendedPackages:
+          type: integer
+          format: int32
+          default: 3
+    RecommendationsResponse:
+      required:
+        - packages
+      type: object
+      properties:
+        packages:
+          type: array
+          items:
+            type: string
     ClonesResponse:
       required:
         - meta
